--- a/local/alertmanager-bot/templates/default.tmpl
+++ b/local/alertmanager-bot/templates/default.tmpl
@@ -3,6 +3,7 @@
 {{ if eq .Status "firing"}}🔥 <b>{{ .Status | toUpper }}</b> 🔥{{ else }}<b>{{ .Status | toUpper }}</b>{{ end }}
 <b>{{ .Labels.alertname }}</b>
 {{ .Annotations.message }}
+<b>Url:</b> {{ .GeneratorURL }}
 <b>Duration:</b> {{ duration .StartsAt .EndsAt }}{{ if ne .Status "firing"}}
 <b>Ended:</b> {{ .EndsAt }}{{ end }}
 {{ end }}
