--- a/local/alertmanager-bot/templates/default.tmpl
+++ b/local/alertmanager-bot/templates/default.tmpl
@@ -1,7 +1,7 @@
 {{ define "telegram.default" }}
 {{ range .Alerts }}
 {{ if eq .Status "firing"}}🔥 <b>{{ .Status | toUpper }}</b> 🔥{{ else }}<b>{{ .Status | toUpper }}</b>{{ end }}
-<b>{{ .Labels.alertname }}</b>
+<b>{{ .Labels.reason }}</b>
 {{ .Annotations.message }}
 <b>Url:</b> {{ .GeneratorURL }}
 <b>Duration:</b> {{ duration .StartsAt .EndsAt }}{{ if ne .Status "firing"}}
