--- a/local/alertmanager-bot/templates/default.tmpl
+++ b/local/alertmanager-bot/templates/default.tmpl
@@ -1,10 +1,10 @@
 {{ define "telegram.default" }}
 {{ range .Alerts }}
-{{ if eq .Status "firing"}}🔥 <b>{{ .Status | toUpper }}</b> 🔥{{ else }}<b>{{ .Status | toUpper }}</b>{{ end }}
+{{ if eq .Status "firing"}}🔥 <b>{{ .Status | toUpper }}</b> 🔥{{ else }}☘️ <b>{{ .Status | toUpper }}</b> ☘️{{ end }}
 <b>{{ .Labels.alertname }}</b>
 {{ .Annotations.message }}
 <b>Count:</b> {{ .Annotations.count }}
+<b>Duration:</b> {{ duration .StartsAt .EndsAt }}
 {{ if ne .GeneratorURL ""}}<b>Url:</b> {{ .GeneratorURL }}{{ end }}
-{{ if ne .Annotations.count "1"}}<b>Duration:</b> {{ duration .StartsAt .EndsAt }}{{ end }}
 {{ end }}
 {{ end }}
